WebCore/page/Frame.cpp
@@ -187,15 +187,8 @@ Frame::~Frame()
     --FrameCounter::count;
 #endif
 
-    if (d->m_jscript && d->m_jscript->haveInterpreter()) {
-        Window* volatile w = static_cast<Window*>(d->m_jscript->interpreter()->globalObject());
-        ASSERT(w);
-        w->disconnectFrame();
-        // Clear w, otherwise we will not garbage-collect collect the window 
-        // (inside the call to delete d below). w is volatile to ensure that the 
-        // compiler doesn't optimize out this operation.
-        w = 0;
-    }
+    if (d->m_jscript && d->m_jscript->haveInterpreter())
+        static_cast<Window*>(d->m_jscript->interpreter()->globalObject())->disconnectFrame();
 
     disconnectOwnerElement();
     
